# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.8.9_pre26 (18 Mar 2002)

  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: configuration
  settings don't get loaded from ${ROOT}/etc anymore, just /etc.  This
  simplifies the creation of a new build image.
  
  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: Don't expect a
  digest file if SRC_URI is set to "" or undefined.

  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: RDEPEND was getting set
  to DEPEND even if there was an RDEPEND="" in the ebuild.  This has now been
  fixed and RDEPEND will only get to DEPEND if RDEPEND has unset (not "unset
  or null", as it was before this fix.)
  
  18 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: circular
  dependencies error will result in the digraph dependencies being printed to
  stdout, greatly simplifying debugging.
  
  18 Mar 2002; Geert Bevin <gbevin@gentoo.org>: src/sandbox/problems: Added
  several sample implementations to reproduce reported bugs.

  18 Mar 2002; Geert Bevin <gbevin@gentoo.org>: libsandbox.c: All paths are now
  checked for multiple successive slashes anywhere, this closes bug 827.
  Performance should be slightly improved for other apps on the system for who
  the sandbox is not turned on.
  
  14 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: output.py: quick fix to
  turn off white color output -- not good for terminals with white background.
  This closes bug #1135.
  
  11 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: Applied karltk's version
  information patch.  Portage.py now contains version information, and this
  info is reported by "emerge --version".  Thanks Karl! :)
 
*portage-1.8.9_pre25 (11 Mar 2002)
 
  10 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: roll
  back portagetree incremental db optimizations to fix an important bug (no